# facebook-rs

./: .dockerignore  Cargo.toml  rustfmt.toml
src/: client.rs  lib.rs  models.rs
